--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "material-ui": "^0.14.4",
+    "normalize.css": "^4.1.1",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
     "react-redux": "^4.4.5",
+    "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.4.0"
   }
 }
